[gd_scene load_steps=6 format=3 uid="uid://blwewyk2fnrew"]

[ext_resource type="Texture2D" uid="uid://cggbnk4jjwqa1" path="res://Graphics/Obstacles/Walls/shutter.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Gimmicks/Shutter.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://idw7ykg4p5x" path="res://Audio/SFX/Gimmicks/Shutter.wav" id="3_dylc3"]

[sub_resource type="RectangleShape2D" id="1"]
resource_local_to_scene = true
size = Vector2(16, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jaxra"]
size = Vector2(112, 64)

[node name="Shutter" type="CharacterBody2D"]
collision_layer = 8207
collision_mask = 0
script = ExtResource("2")

[node name="Shutter" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="Mask" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="ShutterSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_dylc3")
volume_db = 4.0
max_distance = 1000.0

[node name="OpenArea" type="Area2D" parent="."]
position = Vector2(-64, 0)
collision_layer = 0
collision_mask = 4096

[node name="Mask" type="CollisionShape2D" parent="OpenArea"]
modulate = Color(0, 0.298039, 1, 1)
shape = SubResource("RectangleShape2D_jaxra")

[node name="CloseArea" type="Area2D" parent="."]
position = Vector2(-128, 0)
collision_layer = 0
collision_mask = 4096

[node name="Mask" type="CollisionShape2D" parent="CloseArea"]
modulate = Color(1, 0, 0, 1)
shape = SubResource("1")

[node name="CloseArea2" type="Area2D" parent="."]
position = Vector2(16, 0)
collision_layer = 0
collision_mask = 4096

[node name="Mask" type="CollisionShape2D" parent="CloseArea2"]
modulate = Color(1, 0, 0, 1)
shape = SubResource("1")
